# server

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  .rustfmt.toml  BUG_AUDIT.md  Cargo.toml  Dockerfile  EXAMPLES.md  README.md  REFACTORING_PLAN.md  REVIEW.md  apps.csv  config.yaml  http-client.env.json  tests.http
.github/workflows/: lint.yaml  publish.yaml
src/: app_downloader.rs  cli.rs  config.rs  error.rs  gh.rs  main.rs  shell_files.rs  static_site.rs  supported_apps.rs  templates.rs  types.rs
src/domain/: artifact.rs  download.rs  mod.rs  platform.rs
src/http/: mod.rs  query.rs  responses.rs
src/providers/: gh.rs  mod.rs
src/services/: installer.rs  mod.rs  templating.rs
static/: 404.md  index.md  install-linux.liquid
templates/: install.ps1  install.sh  script_preview.html
xtask/: Cargo.toml  README.md
xtask/src/: main.rs
