[package]
name = "termlib-server"
version = "0.3.0"
edition = "2021"

[dependencies]
comrak = { version = "0.41.0", features = ["syntect", "emojis"], default-features = false }
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros", "io-std"] }
url = "2.5.2"
fern = { version = "0.7.1", features = ["chrono", "colored"] }
chrono = "0.4.38"
serde_json = { version = "1.0.140", default-features = false }
octocrab = { version = "0.44.0", features = ["default-client", "hyper-rustls", "rustls", "rustls-ring"], default-features = false }
tera = { version = "1.20.0", default-features = false, features = ["builtins"] }
shell-quote = { version = "0.7.2", default-features = false, features = ["bash", "sh"] }
anyhow = "1.0.98"
mime = "0.3.17"
log = "0.4.27"
axum = "0.8.4"
tower-http = { version = "0.6.6", features = ["cors"] }
serde = { version = "1.0.219", features = ["derive"] }
utoipa = "5.4.0"
