[workspace]
members = [".", "xtask"]
resolver = "2"

[package]
name = "termlib-server"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
axum-test = "19.1.1"
chrono = "0.4.38"
comrak = { version = "0.51.0", features = ["syntect", "emojis"], default-features = false }
fern = { version = "0.7.1", features = ["chrono", "colored"] }
jsonwebtoken = { version = "10.3.0", features = ["use_pem"] }
log = "0.4.27"
mime = "0.3.17"
octocrab = { version = "0.49.5", features = ["default-client", "hyper-rustls", "jwt-rust-crypto", "retry", "rustls", "rustls-aws-lc-rs", "timeout"], default-features = false }
paste = "1.0.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", default-features = false }
shell-quote = { version = "0.7.2", default-features = false, features = ["bash", "sh"] }
tera = { version = "1.20.0", default-features = false, features = ["builtins"] }
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros", "io-std"] }
tower-http = { version = "0.6.8", features = ["cors"] }
url = "2.5.2"
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

[dev-dependencies]
reqwest = { version = "0.13.2", default-features = false, features = ["rustls"] }
