[workspace]
members = [".", "xtask"]
resolver = "2"

[package]
name = "termlibs"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
axum-test = "19.1.1"
chrono = "0.4.38"
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4.6.0"
comrak = { version = "0.51.0", features = ["syntect", "emojis"], default-features = false }
crossterm = "0.29.0"
fern = { version = "0.7.1", features = ["chrono", "colored"] }
flate2 = "1.1.9"
log = "0.4.27"
mime = "0.3.17"
octocrab = { version = "0.49.5", features = ["default-client", "hyper-rustls", "jwt-rust-crypto", "retry", "rustls", "rustls-aws-lc-rs", "timeout"], default-features = false }
paste = "1.0.15"
reqwest = { version = "0.13.2", features = ["blocking", "rustls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", default-features = false }
shell-quote = { version = "0.7.2", default-features = false, features = ["bash", "sh"] }
tar = "0.4.44"
tera = { version = "1.20.0", default-features = false, features = ["builtins"] }
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros", "io-std"] }
tower-http = { version = "0.6.8", features = ["cors"] }
url = "2.5.2"
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
zip = "8.2.0"

[dev-dependencies]
reqwest = { version = "0.13.2", default-features = false, features = ["rustls"] }
